2006-10-23 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	(Broken - don't use on real maps)
	* src/MainWindow.py:
	Clean up constructor for MainWindow.  It was just taunting me
	
	* data/labyrinth-ui.xml:
	Remove Move Mode from menu and toolbar
	
	Branch to fix architecture problems
	
=== Rework Branch (status in brackets)===

2006-10-21 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* README:
	Added "License" section at the top of the file

	* data/labyrinth.svg:
	* data/labyrinth-24.png:
	* data/labyrinth-22.png:
	* data/labyrinth-16.png:
	Shiny new icon from Josef Vybíral
	(icon released under GNU GPL v2)

    * src/Makefile.am:
    Add TextBufferMarkup.py (Issue #16)
    Thanks to "jmalonzo" for spotting :)


2006-10-19 Don Scorgie <DonScorgie@Blueyonder.co.uk>
	
	* src/MainWindow.py:
	Don't complain if no selection is made in extended buffer
	and edit menu is opened with focus on extended buffer

	* src/BaseThought.py:
	* src/DrawingThought.py:
	* src/ImageThought.py:
	Adapt to fit new text entry stuff (pass im_context to
	begin_edit which isn't called for other thought types)
	
	* src/MMapArea.py:
	* src/TextThought.py:
	New text entry stuff.  Pass all keystrokes
	through an IM Context.  Picks up dead keys
	and unicode entry (though no cool underlines u atm).
	Update view entirely when > 1 key is pressed in
	quick succession
	Construct a byte table in text thoughts to handle
	proper deletion / selection / movement within
	multibyte characters


2006-10-18 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/BaseThought.py:
	Fix typo in docstring (Thanks to Rob Tirrell)


2006-10-17 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/MainWindow.py:
	* src/BaseThought.py:
	* src/TextBufferMarkup.py:
	* src/MMapArea.py:
	* data/labyrinth-ui.xml:
	Implement cut / copy / paste for thoughts and extended buffer
	New menu - "Edit" for copy etc., delete thought and View Extended
	Minor edit of TextBufferMarkup
	Clipboard works for both primary selection and main clipboard :)

